Regular english alphabet vigenere
There is vigenere cipher functions now that just encode and decode in a regular 26 letter english alphabet. contact me via discord when i should merge this into the main function

--- a/Final_Project_Tetra_Bowdyn.vcxproj
+++ b/Final_Project_Tetra_Bowdyn.vcxproj
@@ -127,10 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BowdynFunctions.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="TetraFunctions.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BowdynFunctions.h" />
     <ClInclude Include="TetraFunctions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
